--- a/webdoc/src/content/docs/guides/getting-started.mdx
+++ b/webdoc/src/content/docs/guides/getting-started.mdx
@@ -1,15 +1,17 @@
 ---
-title: Getting started
-description: A guide to help you get started with AtomixJs
+title: Getting Started with AtomixJs
+description: Discover how to kickstart your development with AtomixJs, a lightweight and powerful framework for building dynamic web applications.
 ---
 
 import { Tabs, TabItem } from "@astrojs/starlight/components";
 
-AtomixJs is a simple and lightweight framework for building web applications. This guide will help you get started with AtomixJs.
+Welcome to AtomixJs, a modern and efficient framework designed to simplify the process of creating robust web applications. By leveraging AtomixJs, you gain access to a suite of tools and functionalities that streamline the development of custom web components and state management, all while maintaining high performance and developer ergonomics.
 
 ## Quick Start
 
-### Create a new project
+### Setting Up Your Project
+
+To begin your journey with AtomixJs, you need to set up a new project and install the AtomixJs library. Choose your preferred package manager from the options below to add AtomixJs to your project:
 
 <Tabs>
 <TabItem label="npm">
@@ -41,3 +43,23 @@ bun add -D atomixjs
 
 </TabItem>
 </Tabs>
+
+### First Steps
+
+After installing AtomixJs, you're ready to start building. AtomixJs empowers you to create web components with enhanced lifecycle management and state handling capabilities, ensuring your applications are both scalable and maintainable.
+
+Here's a quick overview of what you can achieve with AtomixJs:
+
+- **Efficient Component Creation**: Utilize `makeAtomixComponent` to extend HTML elements with advanced features, including lifecycle management and state subscriptions.
+- **Lifecycle and State Management**: Leverage built-in lifecycle hooks and state management utilities to create dynamic and responsive web applications.
+- **Optimized for Performance**: AtomixJs is designed with performance in mind, ensuring your applications run smoothly across all devices.
+
+## Next Steps
+
+Now that you have AtomixJs set up, explore the following guides to deepen your understanding and harness the full potential of AtomixJs:
+
+- [Component Creation](/guides/component/): Learn how to define and use custom web components.
+- [Lifecycle Management](/guides/lifecycle/): Discover how to manage component lifecycle events efficiently.
+- [State Management](/guides/states/): Understand the state management capabilities of AtomixJs and how to use them in your application.
+
+AtomixJs is constantly evolving, and we are committed to providing you with the tools and knowledge needed to create outstanding web applications. Welcome to the AtomixJs community!
